syntax = "proto3";

import "google/api/annotations.proto";

option csharp_namespace = "GrpcServiceB";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply){
    option (google.api.http) = {
      get: "/v1/greeter/{name}"
    };
  }
   rpc TestTopicEvent (TestTopicEventRequest) returns (HelloReply){
    option (google.api.http) = {
      post: "/v1/greeter/testtopicevent",
      body: "eventData"
    };
  }
}

message TestTopicEventRequest {
  EventData eventData = 1;
}

message EventData {
   int32 id  = 1;
   string name = 2;
   string description = 3;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
